# collector

./: .flake8  .gitignore  flake.nix  pyproject.toml
collector/: __init__.py  __main__.py  cli.py  client.py  const.py  finder.py
scripts/: asreview.py  bibtex.py  counts.py  doi.py  download.py  filter.py
