[tool.poetry]
name = "collector"
version = "0.1.0"
description = "Collect related papers and filter by keywords."
authors = ["Noah Gardner <ngngardner@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^10.12.0"
beartype = "^0.9.0"

requests = "^2.26.0"

PyPaperBot = "^1.2.2"
bibtexparser = "^1.2.0"
questionary = "^1.10.0"
requests-cache = "^0.9.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
wemake-python-styleguide = "^0.15.3"

[tool.poetry.scripts]
collector = 'collector.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
